--- a/package.xml
+++ b/package.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>46.0</version>
+    <version>49.0</version>
+    <types>
+        <members>A0</members>
+        <members>A000</members>
+        <name>ApexClass</name>
+    </types>
 </Package>
